httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-httpbin
spec:
  rules:
    - http:
        paths:
          - path: /headers
            backend:
              serviceName: istio-httpbin
              servicePort: 8000
